fix auto hight and html overflow

--- a/src/assets/base.css
+++ b/src/assets/base.css
@@ -17,7 +17,7 @@
 }
 
 html {
-  overflow: hidden !important;
+  overflow: auto !important;
 }
 
 *,
